# MissionControl

./: Makefile  README.md  package-lock.json  package.json  vite.config.ts
assets/: todo.webm
src/: App.tsx  README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json  todos.db
src-tauri/src/: database.rs  main.rs  types.rs
src-tauri/src/handlers/: database.rs  excalidraw.rs  mod.rs  projects.rs  todos.rs
src-tauri/src/services/: excalidraw.rs  mod.rs  projects.rs  todos.rs
src/components/: ExcalidrawCanvas.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
src/components/ui/: add_task_button.tsx  collapse_state.tsx  focus_state.tsx  hover_button.tsx  hover_state.tsx  project_selector.tsx  todo_item.tsx  todo_list.tsx
src/hooks/: index.ts  useApp.ts  useExcalidraw.ts  useProjects.ts  useTimer.ts  useTodos.ts
src/services/: api.ts
src/types/: index.ts
src/utils/: index.ts  timeUtils.ts
